--- a/challenge4/style.css
+++ b/challenge4/style.css
@@ -1,15 +1,45 @@
 /* Add your code in each class */
 body {
+  background-image: linear-gradient(rgb(43, 29, 3), #000326);
+  background-repeat: no-repeat;
+  background-size: 100% 175%;
 }
 .container {
+  display:flex;
+  flex-wrap: wrap;
 }
+
 .movie-card {
+  margin: 20px;
 }
 .movie-image {
+  margin: 50px;
+  width:300px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 40px;
+
 }
-.movie-details-container {
+.movie-details-container { 
+  position: relative;
+  
+  
+
+  
+  
+
 }
 .descriptions {
+
+  /* position: relative; */
+  /* margin-inline: 300px; */
+  color:white;
+  font-size: 10pt;
+  color:white;
+  position: absolute;
+  bottom: 200px;
+  left: 50px;
 }
 
 /*A gift from us!*/
@@ -17,7 +47,7 @@ body {
   /*
     This gradient was made by this website https://cssgradient.io/
 */
-  position: absolute;
+  /* position: relative; */
   height: 100%;
   width: 100%;
   background: rgb(0, 0, 0);
@@ -26,6 +56,16 @@ body {
     rgba(0, 0, 0, 0.75) 0%,
     rgba(0, 0, 0, 0) 100%
   );
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 40px;
+  width: 300px;
+  height: 150px;
+  position: relative;
+  bottom: 200px;
 }
 .movie-title {
+  font-family: Papyrus;
+  font-size: 20pt;
+  color:white;
+
 }
