--- a/challenge4/style.css
+++ b/challenge4/style.css
@@ -4,41 +4,34 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 175%;
 }
+
 .container {
   display:flex;
   flex-wrap: wrap;
+  
 }
 
 .movie-card {
-  margin: 20px;
+  margin-block: 30px;
+  margin-inline: 50px auto;
 }
-.movie-image {
-  margin: 50px;
-  width:300px;
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 40px;
 
+.movie-image {
+  width:300px;
+  border-radius: 40px;
 }
+
 .movie-details-container { 
   position: relative;
-  
-  
-
-  
-  
-
+  height:0px;
 }
-.descriptions {
 
-  /* position: relative; */
-  /* margin-inline: 300px; */
+.descriptions {
   color:white;
   font-size: 10pt;
   color:white;
   position: absolute;
-  bottom: 200px;
+  bottom: 10px;
   left: 50px;
 }
 
@@ -47,7 +40,6 @@ body {
   /*
     This gradient was made by this website https://cssgradient.io/
 */
-  /* position: relative; */
   height: 100%;
   width: 100%;
   background: rgb(0, 0, 0);
@@ -61,11 +53,11 @@ body {
   width: 300px;
   height: 150px;
   position: relative;
-  bottom: 200px;
+  bottom: 150px;
 }
+
 .movie-title {
   font-family: Papyrus;
   font-size: 20pt;
   color:white;
-
 }
