--- a/challenge2/style.css
+++ b/challenge2/style.css
@@ -7,6 +7,7 @@ body {
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .item {
@@ -20,6 +21,7 @@ body {
     margin-inline: auto; */
     padding: 30px;
     box-shadow: 0px 0px 80px;
+    margin: 20px;
 }
 
 .pika-profile {
